[gd_scene load_steps=5 format=3 uid="uid://cbl3ubk83irtq"]

[ext_resource type="Script" path="res://Scripts/AppleBehavior.gd" id="1_ky0cq"]
[ext_resource type="PackedScene" uid="uid://bwa1bu27jc1xt" path="res://Scenes/Entities/AppleEaten.tscn" id="1_wifss"]
[ext_resource type="PackedScene" uid="uid://c0k2rl8b50qh0" path="res://Scenes/Entities/AppleFull.tscn" id="2_ojfcs"]
[ext_resource type="PackedScene" uid="uid://dltxvxm05i45i" path="res://Scenes/Entities/AppleHalf.tscn" id="3_f5w7p"]

[node name="Apple" type="Node3D" groups=["food"]]
script = ExtResource("1_ky0cq")

[node name="AppleEaten" parent="." instance=ExtResource("1_wifss")]
visible = false

[node name="AppleFull" parent="." instance=ExtResource("2_ojfcs")]

[node name="AppleHalf" parent="." instance=ExtResource("3_f5w7p")]
visible = false
